--- a/Main/UI/OpenWidget.ui
+++ b/Main/UI/OpenWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1120</width>
-    <height>630</height>
+    <height>632</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -43,7 +43,7 @@
  </widget>
  <resources>
   <include location="../../img/icon/resource.qrc"/>
-  <include location="resource.qrc"/>
+  <include location="../../img/icon/resource.qrc"/>
  </resources>
  <connections/>
 </ui>
