0825 외출 퇴근 창 제작 및 클래스 제작

--- a/img/icon/resource.qrc
+++ b/img/icon/resource.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource>
+    <file>out_for_while.png</file>
     <file>camera.png</file>
     <file>interface.png</file>
     <file>face-id.png</file>
