--- a/Main/UI/SaveUserImg.ui
+++ b/Main/UI/SaveUserImg.ui
@@ -227,7 +227,7 @@ height: 40px;
             <string notr="true">background-color: rgb(255, 255, 255);</string>
            </property>
            <property name="text">
-            <string>사진촬영을 눌러주세요!</string>
+            <string/>
            </property>
            <property name="alignment">
             <set>Qt::AlignCenter</set>
