--- a/Main/UI/MainWidget.ui
+++ b/Main/UI/MainWidget.ui
@@ -235,7 +235,7 @@ QPushButton::hover{
       <item>
        <widget class="QStackedWidget" name="stackedWidget">
         <property name="currentIndex">
-         <number>3</number>
+         <number>4</number>
         </property>
         <widget class="QWidget" name="admin_dept_check">
          <layout class="QHBoxLayout" name="horizontalLayout_18">
@@ -1853,6 +1853,9 @@ height: 40px;
                       <pointsize>12</pointsize>
                      </font>
                     </property>
+                    <property name="echoMode">
+                     <enum>QLineEdit::Password</enum>
+                    </property>
                     <property name="readOnly">
                      <bool>true</bool>
                     </property>
@@ -1949,6 +1952,9 @@ height: 40px;
                      <font>
                       <pointsize>12</pointsize>
                      </font>
+                    </property>
+                    <property name="echoMode">
+                     <enum>QLineEdit::Password</enum>
                     </property>
                     <property name="readOnly">
                      <bool>true</bool>
