--- a/Main/UI/PassWordChangeDialog.ui
+++ b/Main/UI/PassWordChangeDialog.ui
@@ -148,6 +148,9 @@ border-radius: 10px;}</string>
            <property name="styleSheet">
             <string notr="true">border-radius:10px;</string>
            </property>
+           <property name="echoMode">
+            <enum>QLineEdit::Password</enum>
+           </property>
            <property name="placeholderText">
             <string>현재 비밀번호</string>
            </property>
@@ -170,6 +173,9 @@ border-radius: 10px;}</string>
               <string notr="true">border-top-left-radius: 10px;
     border-top-right-radius: 10px;</string>
              </property>
+             <property name="echoMode">
+              <enum>QLineEdit::Password</enum>
+             </property>
              <property name="placeholderText">
               <string>새 비밀번호</string>
              </property>
@@ -186,6 +192,9 @@ border-radius: 10px;}</string>
              <property name="styleSheet">
               <string notr="true">border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;</string>
+             </property>
+             <property name="echoMode">
+              <enum>QLineEdit::Password</enum>
              </property>
              <property name="placeholderText">
               <string>비밀번호 확인</string>
