사원 패스워드 변경 기능구현중

--- a/Main/UI/PassWordChangeDialog.ui
+++ b/Main/UI/PassWordChangeDialog.ui
@@ -95,7 +95,6 @@ border-radius: 10px;}</string>
              <property name="font">
               <font>
                <pointsize>15</pointsize>
-               <weight>75</weight>
                <bold>true</bold>
               </font>
              </property>
@@ -244,6 +243,9 @@ border-radius: 10px;}</string>
              </property>
              <property name="styleSheet">
               <string notr="true">border-radius:10px;</string>
+             </property>
+             <property name="readOnly">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
