--- a/Main/UI/PassWordChangeDialog.ui
+++ b/Main/UI/PassWordChangeDialog.ui
@@ -95,6 +95,7 @@ border-radius: 10px;}</string>
              <property name="font">
               <font>
                <pointsize>15</pointsize>
+               <weight>75</weight>
                <bold>true</bold>
               </font>
              </property>
@@ -132,7 +133,7 @@ border-radius: 10px;}</string>
           </spacer>
          </item>
          <item>
-          <widget class="QLineEdit" name="lineEdit">
+          <widget class="QLineEdit" name="now_pw_edit">
            <property name="minimumSize">
             <size>
              <width>0</width>
