--- a/img/icon/resource.qrc
+++ b/img/icon/resource.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource>
+    <file>user.png</file>
     <file>refresh.png</file>
     <file>out_for_while.png</file>
     <file>camera.png</file>
