0828 그래프 추가중3

--- a/Main/UI/MainWidget.ui
+++ b/Main/UI/MainWidget.ui
@@ -235,7 +235,7 @@ QPushButton::hover{
       <item>
        <widget class="QStackedWidget" name="stackedWidget">
         <property name="currentIndex">
-         <number>3</number>
+         <number>2</number>
         </property>
         <widget class="QWidget" name="admin_dept_check">
          <layout class="QHBoxLayout" name="horizontalLayout_18">
@@ -304,6 +304,29 @@ QPushButton::hover{
                   </size>
                  </property>
                 </spacer>
+               </item>
+               <item>
+                <widget class="QPushButton" name="emp_detail_check">
+                 <property name="minimumSize">
+                  <size>
+                   <width>120</width>
+                   <height>41</height>
+                  </size>
+                 </property>
+                 <property name="font">
+                  <font>
+                   <pointsize>13</pointsize>
+                  </font>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true">border-radius:10px;
+background-color:#3085FE;
+color: white;</string>
+                 </property>
+                 <property name="text">
+                  <string>사원정보확인</string>
+                 </property>
+                </widget>
                </item>
               </layout>
              </item>
@@ -1294,7 +1317,7 @@ background-color: rgb(230, 234, 245);</string>
                    <enum>Qt::Vertical</enum>
                   </property>
                   <property name="sizeType">
-                   <enum>QSizePolicy::Fixed</enum>
+                   <enum>QSizePolicy::Preferred</enum>
                   </property>
                   <property name="sizeHint" stdset="0">
                    <size>
@@ -1333,9 +1356,35 @@ background-color: rgb(230, 234, 245);</string>
                    </property>
                    <item>
                     <widget class="QWidget" name="graph_widget_1" native="true">
+                     <property name="maximumSize">
+                      <size>
+                       <width>379</width>
+                       <height>16777215</height>
+                      </size>
+                     </property>
+                     <property name="styleSheet">
+                      <string notr="true">background-color: rgb(255, 255, 255);
+border-radius:10px;</string>
+                     </property>
                      <layout class="QVBoxLayout" name="verticalLayout_7">
+                      <property name="leftMargin">
+                       <number>0</number>
+                      </property>
+                      <property name="topMargin">
+                       <number>0</number>
+                      </property>
+                      <property name="rightMargin">
+                       <number>0</number>
+                      </property>
+                      <property name="bottomMargin">
+                       <number>0</number>
+                      </property>
                       <item>
-                       <layout class="QVBoxLayout" name="verticalLayout_6"/>
+                       <layout class="QVBoxLayout" name="verticalLayout_6">
+                        <property name="spacing">
+                         <number>0</number>
+                        </property>
+                       </layout>
                       </item>
                       <item>
                        <widget class="QLabel" name="graph_contents_1">
@@ -1346,7 +1395,11 @@ background-color: rgb(230, 234, 245);</string>
                          </size>
                         </property>
                         <property name="text">
-                         <string>그래프에 대한 설명</string>
+                         <string>최근 일주일간 근무시간 그래프
+(월별 그래프를 보려면 클릭하세요)</string>
+                        </property>
+                        <property name="alignment">
+                         <set>Qt::AlignCenter</set>
                         </property>
                        </widget>
                       </item>
@@ -1355,7 +1408,23 @@ background-color: rgb(230, 234, 245);</string>
                    </item>
                    <item>
                     <widget class="QWidget" name="graph_widget_2" native="true">
+                     <property name="styleSheet">
+                      <string notr="true">background-color: rgb(255, 255, 255);
+border-radius:10px;</string>
+                     </property>
                      <layout class="QVBoxLayout" name="verticalLayout_8">
+                      <property name="leftMargin">
+                       <number>0</number>
+                      </property>
+                      <property name="topMargin">
+                       <number>0</number>
+                      </property>
+                      <property name="rightMargin">
+                       <number>0</number>
+                      </property>
+                      <property name="bottomMargin">
+                       <number>0</number>
+                      </property>
                       <item>
                        <layout class="QVBoxLayout" name="verticalLayout_9"/>
                       </item>
@@ -1370,6 +1439,9 @@ background-color: rgb(230, 234, 245);</string>
                         <property name="text">
                          <string>그래프에 대한 설명</string>
                         </property>
+                        <property name="alignment">
+                         <set>Qt::AlignCenter</set>
+                        </property>
                        </widget>
                       </item>
                      </layout>
@@ -1380,6 +1452,19 @@ background-color: rgb(230, 234, 245);</string>
                 </item>
                </layout>
               </widget>
+             </item>
+             <item>
+              <spacer name="verticalSpacer_6">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>40</height>
+                </size>
+               </property>
+              </spacer>
              </item>
             </layout>
            </widget>
@@ -1569,29 +1654,6 @@ background-color: rgb(217, 217, 217);</string>
                  </property>
                  <property name="text">
                   <string>확인</string>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QPushButton" name="emp_detail_check">
-                 <property name="minimumSize">
-                  <size>
-                   <width>120</width>
-                   <height>41</height>
-                  </size>
-                 </property>
-                 <property name="font">
-                  <font>
-                   <pointsize>13</pointsize>
-                  </font>
-                 </property>
-                 <property name="styleSheet">
-                  <string notr="true">border-radius:10px;
-background-color:#3085FE;
-color: white;</string>
-                 </property>
-                 <property name="text">
-                  <string>사원정보확인</string>
                  </property>
                 </widget>
                </item>
